--- a/fallback/index.html
+++ b/fallback/index.html
@@ -25,7 +25,7 @@
     .message-box {
       background: #fff;
       color: #111;
-      border-radius: 1.2em;
+      border-radius: 8px;
       box-shadow: 0 6px 40px 0 rgba(0,0,0,0.18);
       padding: 2.4em 2em 2em 2em;
       max-width: 420px;
@@ -71,7 +71,7 @@
       background: #fffbe7;
       color: #111;
       padding: 0.5em 1em;
-      border-radius: 0.5em;
+      border-radius: 8px;
       z-index: 9999;
       box-shadow: 0 2px 10px #aaa;
     }
